force-app/main/default/objects/GFH_Evaluation__c/GFH_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Evaluation</label>
    <pluralLabel>Evaluations</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>