force-app/main/default/objects/GFH_Evaluation__c/fields/LearningMetric_05__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_05__c</fullName>
    <label>Learning Metric 05</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
            <fullName>N/A</fullName>
        </value>
        <value>
            <fullName>Low</fullName>
        </value>
        <value>
            <fullName>Medium</fullName>
        </value>
        <value>
            <fullName>High</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
</CustomField>