force-app/main/default/objects/GFH_Evaluation__c/fields/LearningMetric_07__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_07__c</fullName>
    <label>LearningMetric 07</label>
    <type>Text</type>
    <length>255</length>
</CustomField>