force-app/main/default/objects/GFH_Evaluation__c/fields/LearningMetric_12__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_12__c</fullName>
    <label>Learning Metric 12</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>