force-app/main/default/objects/GFH_Evaluation__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <label>Mentor</label>
    <type>Lookup</type>
    <referenceTo>GFH_Mentor__c</referenceTo>
    <relationshipName>Mentor</relationshipName>
    <relationshipLabel>Mentor</relationshipLabel>
</CustomField>