force-app/main/default/objects/GFH_Evaluation__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <label>Submission</label>
    <type>Lookup</type>
    <referenceTo>GFH_Submission__c</referenceTo>
    <relationshipName>Submission</relationshipName>
    <relationshipLabel>Submission</relationshipLabel>
</CustomField>